--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "start": "node --inspect index.js",
     "dev": "nodemon --inspect index.js"
   },
@@ -15,7 +15,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
+    "lodash": "^4.17.21",
     "mongoose": "^7.6.5",
     "nodemon": "^3.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0"
   }
 }
