Add blog api tests

--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "part4",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest --verbose",
-    "start": "node --inspect index.js",
-    "dev": "nodemon --inspect index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jest": "^29.7.0",
-    "lodash": "^4.17.21",
-    "mongoose": "^7.6.5",
-    "nodemon": "^3.0.2"
-  },
-  "devDependencies": {
-    "eslint": "^8.56.0"
-  }
+    "name": "part4",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest --verbose",
+        "start": "node --inspect index.js",
+        "dev": "nodemon --inspect index.js"
+    },
+    "jest": {
+        "testEnvironment": "node",
+        "globalTeardown": "./tests/teardown.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "express-async-errors": "^3.1.1",
+        "jest": "^29.7.0",
+        "lodash": "^4.17.21",
+        "mongoose": "^7.6.5",
+        "nodemon": "^3.0.2",
+        "supertest": "^6.3.3"
+    },
+    "devDependencies": {
+        "eslint": "^8.56.0"
+    }
 }
