feature: add relationships

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=3001
-MONGODB_URI=mongodb+srv://fullstack:vZgF9f1Y1KJsLSzc@part3-notes.vxsmlph.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://fullstack:vZgF9f1Y1KJsLSzc@part3-notes.vxsmlph.mongodb.net/blogs?retryWrites=true&w=majority
+
+TEST_MONGODB_URI=mongodb+srv://fullstack:vZgF9f1Y1KJsLSzc@part3-notes.vxsmlph.mongodb.net/testBslogs?retryWrites=true&w=majority
