--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "jest --verbose",
-        "start": "node --inspect index.js",
-        "dev": "nodemon --inspect index.js"
+        "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
+        "start": "cross-env NODE_ENV=production node --inspect index.js",
+        "dev": "cross-env NODE_ENV=development nodemon --inspect index.js"
     },
     "jest": {
         "testEnvironment": "node",
@@ -16,13 +16,16 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
+        "cross-env": "^7.0.3",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
         "jest": "^29.7.0",
         "lodash": "^4.17.21",
         "mongoose": "^7.6.5",
+        "mongoose-unique-validator": "^4.0.0",
         "nodemon": "^3.0.2",
         "supertest": "^6.3.3"
     },
